--- a/index.html
+++ b/index.html
@@ -41,63 +41,45 @@
     .levelC{background-image:url('imagens/levelC.png');}
     .levelD{background-image:url('imagens/levelD.png');}
 
-    /* ---------- BALÃO LÚDICO DO USUÁRIO (absolute no topo-direito) ---------- */
+    /* ---------- BALÃO LÚDICO “PURO” (sem borda) ---------- */
     .login-container{
-      position:absolute; top:12px; right:14px; z-index:20;
+      position:absolute; top:16px; right:14px; z-index:20;
+      width: 96px; /* largura fixa para não esticar com nomes longos */
       display:flex; flex-direction:column; align-items:center; gap:6px;
-      width:92px; /* largura fixa pra não “esticar” com nomes longos */
-      padding:8px 10px 10px;
-      background:rgba(255,255,255,0.40);
-      backdrop-filter:blur(8px); -webkit-backdrop-filter:blur(8px);
-      border:1px solid rgba(43,163,77,0.35);   /* verde suave */
-      border-radius:18px;
-      box-shadow:0 8px 22px rgba(0,0,0,0.15);
+      padding:8px 8px 10px;
+      background: rgba(255,255,255,0.35);           /* translúcido suave */
+      backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+      border-radius: 18px;
+      box-shadow: 0 8px 22px rgba(0,0,0,0.18);       /* sombra leve */
       cursor:pointer;
     }
-    /* bolhinhas decorativas (bem discretas) */
-    .login-container::after{
-      content:""; position:absolute; inset:-1px; border-radius:18px; pointer-events:none;
-      box-shadow:inset 0 1px 0 rgba(255,255,255,0.6);
-    }
-    /* avatar maior, circular, com aro branco */
     .user-icon{
-      width:48px; height:48px; border-radius:50%; object-fit:cover;
-      box-shadow:0 0 0 2px rgba(255,255,255,0.95), 0 2px 6px rgba(0,0,0,0.18);
+      width:55px; height:55px; border-radius:50%; object-fit:cover;
+      box-shadow: 0 0 0 2px rgba(255,255,255,0.95), 0 2px 6px rgba(0,0,0,0.18);
     }
-    /* nome abaixo, centralizado e com ellipsis */
     .user-name{
-      margin:0; line-height:1.1; text-align:center;
-      font-size:13px; font-weight:600; color:#1a5f34; /* verde escuro */
-      max-width:80px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
+      margin:0; line-height:1.05; text-align:center;
+      font-size:13px; font-weight:600; color:#1a5f34;     /* verde escuro */
+      max-width: 84px;
+      white-space: nowrap; overflow: hidden; text-overflow: ellipsis; /* segurança extra */
     }
-    /* esconda qualquer caret antigo */
-    .login-caret{ display:none !important; }
+    .login-caret{ display:none !important; } /* garante que nenhuma seta apareça */
 
-    /* Dropdown em balão */
+    /* Dropdown em “balão” abaixo do avatar */
     .dropdown{
       display:none; position:absolute; right:0; top:calc(100% + 10px); z-index:25;
       min-width:220px; background:rgba(255,255,255,0.98);
-      border:1px solid rgba(0,0,0,0.06); border-radius:14px;
-      box-shadow:0 16px 34px rgba(0,0,0,0.18); overflow:hidden;
+      border-radius:14px; box-shadow:0 16px 34px rgba(0,0,0,0.18); overflow:hidden;
+      border: 1px solid rgba(0,0,0,0.06);
     }
     .dropdown::before{
       content:""; position:absolute; top:-8px; right:18px;
       width:0; height:0; border-left:8px solid transparent; border-right:8px solid transparent;
       border-bottom:8px solid rgba(255,255,255,0.98);
-      filter:drop-shadow(0 -1px 0 rgba(0,0,0,0.06));
+      filter: drop-shadow(0 -1px 0 rgba(0,0,0,0.06));
     }
-    .dropdown a{
-      display:block; padding:12px 14px; font-size:15px; color:#222; text-decoration:none; text-align:left;
-    }
-    .dropdown a:hover{ background:rgba(0,0,0,0.05); }
-
-    /* Mobile muito estreito: mostra só o avatar (nome no dropdown) */
-    @media (max-width:360px){
-      .login-container{ width:60px; padding:8px 8px 9px; }
-      .user-icon{ width:46px; height:46px; }
-      .user-name{ display:none; }
-      .dropdown::before{ right:12px; }
-    }
+    .dropdown a{display:block;padding:12px 14px;font-size:15px;color:#222;text-decoration:none;text-align:left;}
+    .dropdown a:hover{background:rgba(0,0,0,0.05);}
 
     /* ---------- robô, play e convites ---------- */
     .robo-container{display:flex;flex-direction:column;align-items:center;margin:20px auto;}
@@ -304,7 +286,7 @@
     }
     speechSynthesis.onvoiceschanged=()=>englishVoice=pickVoice();
 
-    /* ---------- Liberação de níveis (UI) ---------- */
+    /* ---------- UI: bloquear/liberar níveis ---------- */
     function bloquearTodosNiveis(){
       document.querySelectorAll(".level-button").forEach(b=>{
         b.style.filter="grayscale(100%)";
@@ -344,10 +326,15 @@
         try{
           const snap=await firebase.database().ref("usuarios/"+user.uid).once("value");
           const d=snap.val()||{};
-          const name=d.nome||user.email;
+          const rawName=d.nome||user.email;
+          const formatName=(nm)=>{ // limita a 10 caracteres, inclui reticências se exceder
+            const clean=String(nm||"").trim();
+            return clean.length>10 ? clean.slice(0,10)+"…" : clean;
+          };
+          const name=formatName(rawName);
           const avatar=d.avatar?`imagens/${d.avatar}`:"imagens/bonecologin1.png";
 
-          // Monta o balão lúdico (avatar grande + nome abaixo)
+          // Monta o balão (avatar 55 + nome centralizado)
           loginLink.innerHTML=""; loginLink.removeAttribute("href");
           const img=document.createElement("img");
           img.className="user-icon"; img.alt="User avatar"; img.src=avatar;
@@ -404,7 +391,7 @@
             l.onclick=e=>{ e.preventDefault(); window.location.href=l.getAttribute("href"); };
           });
 
-          // Dropdown (abre/fecha)
+          // Dropdown abre/fecha
           function toggleDropdown(open){
             const shouldOpen=(typeof open==="boolean")?open:(userDropdown.style.display!=="block");
             userDropdown.style.display=shouldOpen?"block":"none";
